@@ -11,17 +11,16 @@
               </button>
               <div class="dropdown-content">
                   <a href="#">Quizzes</a>
-                  <form method="POST">
-                     {{ quizform.as_p }}
-                        <div>
-                             <input id= "submit" type="submit" name="submit" value="Submit">
-                        </div>
-                    </form>
                   <a href="#">Homeworks</a>
                   <a href="#">Surveys</a>
               </div>
           </div>
           <a href="#">Grades</a>
+          {% if user.is_authenticated %}
+              <a href="{% url 'logout' %}">Logout</a>
+          {% else %}
+            <a href="{% url 'login' %}">Login</a>
+          {% endif %}
           <a href="javascript:void(0);" class="icon" onclick="navBarFunction()">
               <i class="fa fa-bars"></i>
           </a>
@@ -44,12 +43,11 @@
     <div class="fakeimg" style="height:60px;">Image</div>
   </div>
   <div class="side w3-center w3-animate-right">
-    <h2>TITLE HEADING</h2>
+    <h2>TASK VIEW</h2>
     <h5>Title description, Dec 7, 2017</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    <div class="fakeimg" style="height:200px;">Image</div>
+
   </div>
 </div>
 {% endblock content %}
