@@ -2,14 +2,13 @@
 
 {% block content %}
 <div class="row">
+    {% if user.is_authenticated %}
     <div class = "classList main w3-animate-opacity">
         {% for course in  user.courses.all %}
-
-            <li><a href="{% url 'course_page' id=course.id%}">{{ course.course_name }}</a></li>
-
-        {%  endfor %}
-
+            <a href="{% url 'course_page' id=course.id%}"><span>{{ course.course_name }}</span></a>
+        {% endfor %}
     </div>
+    {% else %}
   <div class="main w3-animate-opacity">
     <h2>Open Learning Management System Lite</h2>
     <p>Welcome to Open LMS Lite, an open source learning management system.</p><br><br>
@@ -30,12 +29,23 @@
 
         </p>
   </div>
-  <div class="side w3-center w3-animate-right">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Dec 7, 2017</h5>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    <br>
+    {% endif %}
+  <div class="side w3-center w3- w3-animate-right">
+      {% if user.is_authenticated %}
+          <h2>TASK VIEW</h2>
+      {% else %}
+    <h2>TODAY</h2><br>
+
+        <div class = "w3-center" id="calendar">
+                <p id="calendar-day"></p>
+                <p id="calendar-date"></p>
+                <p id="calendar-month-year"></p>
+        </div><br><br>
+          <div style="width: 100%;">
+              <iframe style="display: block;" src="https://cdnres.willyweather.com/widget/loadView.html?id=105288" width="100%" height="228" frameborder="0" scrolling="no"></iframe>
+              <a style="height: 20px;z-index: 1;margin: -20px 0 0 0;position: relative;display: block;text-indent: -9999em" href="https://www.willyweather.com/ga/bulloch-county/statesboro.html" rel="nofollow">local weather</a>
+          </div>
+      {% endif %}
   </div>
 </div>
 {% endblock content %}
