@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-
     <form method="POST">
-
     {{ form.as_p }}
         <div>
             <input id= "submit" type="submit" name="submit" value="Submit">
         </div>
     </form>
-
 {% endblock content %}
