@@ -13,3 +13,4 @@
 - Updated auto sizing of page elements for Login and Home (@as12660)
 - Added more CSS (including animation) to home/login/profile/course page (@as12660)
 - Added dropdown menu to Assignments tab in navigation on course page along with other small CSS changes (@as12660)
+- Added date and weather to home page (@as12660)
